# coding_challenges

./: .gitignore
.github/workflows/: deploy-job.yml
1brc/: common.rb  main.rb  main_using_each_byte.rb  main_using_split.rb  test.rb
ccredis/: Cargo.toml  README.md
ccredis/src/: main.rs  message_processor.rs  processing_error.rs
ccredis/src/resp/: message.rs  message_parser.rs  mod.rs  parse_error.rs
runumbers/: README.md  main.rb  ru_numbers.rb  ru_numbers_test.rb
sigmars_garden_solver/: .gitignore  README.md  autosolver.rb  garden_parser.rb  garden_solver.rb  main.rb  marble.rb  symbol_detector.py  test.rb  test_full.rb  test_with_profiler.rb
urlshortener/: .env  Cargo.toml  Dockerfile  README.md  compose.yaml  env.dev  env.test  test.Dockerfile
urlshortener/assets/: index.html  script.js  styles.css
urlshortener/docker/: dev_setup  dev_setup.ps1  dev_up  dev_up.ps1  test_run  test_run.ps1  test_setup  test_setup.ps1
urlshortener/src/: api.rs  api_test.rs  db_drop.rs  db_setup.rs  error_handler.rs  init_app_state.rs  lib.rs  main.rs
urlshortener/src/entities/: mod.rs  prelude.rs  short_urls.rs
urlshortener/src/migrator/: mod.rs
urlshortener/src/services/: create_short_url.rs  delete_short_url.rs  find_short_url.rs  mod.rs
urlshortener/src/test/: api_test_get.rs  api_test_post.rs
urlshortener/test/: api_test_get.rs  api_test_post.rs  mod.rs
wc/: Cargo.toml
wc/src/: main.rs
wc/tests/: cli.rs
webserver/: README.md  helpers.go  main.go  server.go
webserver/public/: form.html
webserver/views/: form_submitted.html.tmpl  info.html.tmpl
