[package]
name = "urlshortener"
version = "0.1.0"
edition = "2021"
default-run = "urlshortener"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
base64 = "0.22.1"
dotenv = "0.15.0"
sea-orm = { version = "0.12.15", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "0.12.15"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.2"
serde_json = "1.0.120"
